JDK 8 through 24 build testing