@@ -14,7 +14,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.jsonwebtoken</groupId>
@@ -90,7 +91,7 @@
     <properties>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <arguments />
+        <arguments/>
 
         <jjwt.root>${basedir}</jjwt.root>
         <jjwt.previousVersion>0.11.2</jjwt.previousVersion>
@@ -113,7 +114,7 @@
         <orgjson.version>20250517</orgjson.version>
         <gson.version>2.13.1</gson.version>
 
-        <maven.javadoc.additionalOptions />
+        <maven.javadoc.additionalOptions/>
 
         <!-- Optional Runtime Dependencies: -->
         <bouncycastle.version>1.81</bouncycastle.version>
@@ -129,11 +130,12 @@
         <surefire.plugin.version>3.1.2</surefire.plugin.version>
         <clover.version>4.5.2</clover.version>
         <clover.db>${jjwt.root}/target/clover/clover.db</clover.db>
-        <surefire.argLine />
+        <surefire.argLine/>
         <test.addOpens>
             --add-opens java.base/java.lang=ALL-UNNAMED, <!-- Needed by EasyMock/cglib -->
             --add-opens java.desktop/java.beans=ALL-UNNAMED, <!-- Needed by EasyMock/cglib -->
             --add-opens java.base/java.lang.ref=ALL-UNNAMED, <!-- Needed by PowerMock -->
+            --add-opens java.base/java.security=ALL-UNNAMED, <!-- Needed by TestProvider.groovy on JDK 17 or later -->
             <!-- needed by KeysImplTest.testKeyPairFor, KeysTest.testDeprecatedKeyPairFor, and
                  KeysTest.testKeyPairBuilder: -->
             --add-opens java.base/sun.security.util=ALL-UNNAMED
@@ -558,6 +560,7 @@
                 <configuration>
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
+                    <release>${jdk.version}</release>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
@@ -678,7 +681,6 @@
                 <jdk>[1.9,)</jdk>
             </activation>
             <properties>
-                <maven.compiler.version>3.11.0</maven.compiler.version>
                 <surefire.useModulePath>false</surefire.useModulePath>
                 <maven.javadoc.additionalOptions>-html5</maven.javadoc.additionalOptions>
                 <surefire.argLine>${test.addOpens}, --illegal-access=debug</surefire.argLine>
@@ -692,16 +694,6 @@
             <properties>
                 <maven.javadoc.additionalOptions>-html5</maven.javadoc.additionalOptions>
                 <surefire.argLine>${test.addOpens}</surefire.argLine>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk21AndLater</id>
-            <activation>
-                <jdk>[21,)</jdk>
-            </activation>
-            <properties>
-                <!-- normally this is 1.7, but as of 21, JDK 8 is the lowest source/target -->
-                <jdk.version>8</jdk.version>
             </properties>
         </profile>
         <profile>
